--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,9 @@ yarn-error.log*
 .babelrc
 *-lock.json
 src/abis/Migrations.json
+presentation.aux
+presentation.log
+presentation.nav
+presentation.out
+presentation.snm
+presentation.toc
