--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
-    "ipfs-core": "^0.17.0",
+    "dot-prop": "^7.1.1",
+    "https-browserify": "^1.0.0",
+    "ipfs-core": "^0.16.0",
+    "ipfs-css": "^1.3.0",
     "react": "18.2.0",
     "react-bootstrap": "2.6.0 ",
     "react-dom": "18.2.0",
-    "react-scripts": "2.1.3",
+    "react-scripts": "5.0.1",
     "truffle": "^5.0.5",
     "web3": "1.0.0-beta.55"
   },
