--- a/package.json
+++ b/package.json
@@ -1,26 +1,18 @@
 {
-  "name": "distributed-marketplace",
-  "version": "0.0.1",
-  "description": "Distributed Etherum Blockchain Marketplace",
-  "author": "@uab.com",
+  "name": "blackmarket",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
-    "bootstrap": "5.2.0",
-    "chai": "4.2.0",
-    "chai-as-promised": "7.1.1",
-    "chai-bignumber": "3.0.0",
-    "dot-prop": "^7.1.1",
-    "https-browserify": "^1.0.0",
-    "ipfs-core": "^0.16.0",
-    "ipfs-css": "^1.3.0",
-    "react": "18.2.0",
-    "react-bootstrap": "2.6.0 ",
-    "react-dom": "18.2.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "ipfs-core": "^0.17.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "truffle": "^5.0.5",
-    "web3": "1.0.0-beta.55"
+    "truffle": "^5.6.7",
+    "web-vitals": "^2.1.4",
+    "web3": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,12 +21,21 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
